core/elmo.peg.go
package elmo

// Code generated by /var/folders/w1/p5vgwvs17bd44fc_m3svl7xr0000gn/T/go-build1378766646/b001/exe/peg elmo.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleScript
	ruleLine
	rulePipedOutput
	ruleEndOfLine
	ruleArgument
	ruleFunctionCall
	ruleBlock
	ruleBlockWithoutSpacing
	ruleList
	ruleSpacing
	ruleWhiteSpace
	ruleLongComment
	ruleLineComment
	ruleNewLine
	ruleIdentifier
	ruleIdNondigit
	ruleIdChar
	ruleIdEnd
	ruleStringLiteral
	ruleQuote
	ruleStringChar
	ruleEscape
	ruleLongStringLiteral
	ruleBackTick
	ruleLongStringChar
	ruleLongEscape
	ruleNumber
	ruleNumbers
	ruleLPAR
	ruleRPAR
	ruleLCURLY
	ruleRCURLY
	ruleLBRACKET
	ruleRBRACKET
	ruleCOMMA
	rulePCOMMA
	ruleCOLON
	ruleDOT
	rulePIPE
	ruleDOLLAR
	ruleAMPERSAND
	ruleEOT
)

var rul3s = [...]string{
	"Unknown",
	"Script",
	"Line",
	"PipedOutput",
	"EndOfLine",
	"Argument",
	"FunctionCall",
	"Block",
	"BlockWithoutSpacing",
	"List",
	"Spacing",
	"WhiteSpace",
	"LongComment",
	"LineComment",
	"NewLine",
	"Identifier",
	"IdNondigit",
	"IdChar",
	"IdEnd",
	"StringLiteral",
	"Quote",
	"StringChar",
	"Escape",
	"LongStringLiteral",
	"BackTick",
	"LongStringChar",
	"LongEscape",
	"Number",
	"Numbers",
	"LPAR",
	"RPAR",
	"LCURLY",
	"RCURLY",
	"LBRACKET",
	"RBRACKET",
	"COMMA",
	"PCOMMA",
	"COLON",
	"DOT",
	"PIPE",
	"DOLLAR",
	"AMPERSAND",
	"EOT",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type ElmoGrammar struct {
	Buffer string
	buffer []rune
	rules  [43]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *ElmoGrammar) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *ElmoGrammar) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *ElmoGrammar
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *ElmoGrammar) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *ElmoGrammar) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *ElmoGrammar) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*ElmoGrammar) error {
	return func(p *ElmoGrammar) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*ElmoGrammar) error {
	return func(p *ElmoGrammar) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *ElmoGrammar) Init(options ...func(*ElmoGrammar) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 Script <- <(Spacing Line* EOT)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				if !_rules[ruleSpacing]() {
					goto l0
				}
			l2:
				{
					position3, tokenIndex3 := position, tokenIndex
					if !_rules[ruleLine]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position3, tokenIndex3
				}
				if !_rules[ruleEOT]() {
					goto l0
				}
				add(ruleScript, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Line <- <(NewLine? Argument COLON? Argument? ((COMMA NewLine?)? Argument)* (PipedOutput / EndOfLine)?)> */
		func() bool {
			position4, tokenIndex4 := position, tokenIndex
			{
				position5 := position
				{
					position6, tokenIndex6 := position, tokenIndex
					if !_rules[ruleNewLine]() {
						goto l6
					}
					goto l7
				l6:
					position, tokenIndex = position6, tokenIndex6
				}
			l7:
				if !_rules[ruleArgument]() {
					goto l4
				}
				{
					position8, tokenIndex8 := position, tokenIndex
					if !_rules[ruleCOLON]() {
						goto l8
					}
					goto l9
				l8:
					position, tokenIndex = position8, tokenIndex8
				}
			l9:
				{
					position10, tokenIndex10 := position, tokenIndex
					if !_rules[ruleArgument]() {
						goto l10
					}
					goto l11
				l10:
					position, tokenIndex = position10, tokenIndex10
				}
			l11:
			l12:
				{
					position13, tokenIndex13 := position, tokenIndex
					{
						position14, tokenIndex14 := position, tokenIndex
						if !_rules[ruleCOMMA]() {
							goto l14
						}
						{
							position16, tokenIndex16 := position, tokenIndex
							if !_rules[ruleNewLine]() {
								goto l16
							}
							goto l17
						l16:
							position, tokenIndex = position16, tokenIndex16
						}
					l17:
						goto l15
					l14:
						position, tokenIndex = position14, tokenIndex14
					}
				l15:
					if !_rules[ruleArgument]() {
						goto l13
					}
					goto l12
				l13:
					position, tokenIndex = position13, tokenIndex13
				}
				{
					position18, tokenIndex18 := position, tokenIndex
					{
						position20, tokenIndex20 := position, tokenIndex
						if !_rules[rulePipedOutput]() {
							goto l21
						}
						goto l20
					l21:
						position, tokenIndex = position20, tokenIndex20
						if !_rules[ruleEndOfLine]() {
							goto l18
						}
					}
				l20:
					goto l19
				l18:
					position, tokenIndex = position18, tokenIndex18
				}
			l19:
				add(ruleLine, position5)
			}
			return true
		l4:
			position, tokenIndex = position4, tokenIndex4
			return false
		},
		/* 2 PipedOutput <- <(PIPE Line)> */
		func() bool {
			position22, tokenIndex22 := position, tokenIndex
			{
				position23 := position
				if !_rules[rulePIPE]() {
					goto l22
				}
				if !_rules[ruleLine]() {
					goto l22
				}
				add(rulePipedOutput, position23)
			}
			return true
		l22:
			position, tokenIndex = position22, tokenIndex22
			return false
		},
		/* 3 EndOfLine <- <(PCOMMA / NewLine)> */
		func() bool {
			position24, tokenIndex24 := position, tokenIndex
			{
				position25 := position
				{
					position26, tokenIndex26 := position, tokenIndex
					if !_rules[rulePCOMMA]() {
						goto l27
					}
					goto l26
				l27:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[ruleNewLine]() {
						goto l24
					}
				}
			l26:
				add(ruleEndOfLine, position25)
			}
			return true
		l24:
			position, tokenIndex = position24, tokenIndex24
			return false
		},
		/* 4 Argument <- <((Identifier (DOT Identifier)*) / StringLiteral / LongStringLiteral / Number / FunctionCall / Block / List)> */
		func() bool {
			position28, tokenIndex28 := position, tokenIndex
			{
				position29 := position
				{
					position30, tokenIndex30 := position, tokenIndex
					if !_rules[ruleIdentifier]() {
						goto l31
					}
				l32:
					{
						position33, tokenIndex33 := position, tokenIndex
						if !_rules[ruleDOT]() {
							goto l33
						}
						if !_rules[ruleIdentifier]() {
							goto l33
						}
						goto l32
					l33:
						position, tokenIndex = position33, tokenIndex33
					}
					goto l30
				l31:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleStringLiteral]() {
						goto l34
					}
					goto l30
				l34:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleLongStringLiteral]() {
						goto l35
					}
					goto l30
				l35:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleNumber]() {
						goto l36
					}
					goto l30
				l36:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleFunctionCall]() {
						goto l37
					}
					goto l30
				l37:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleBlock]() {
						goto l38
					}
					goto l30
				l38:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleList]() {
						goto l28
					}
				}
			l30:
				add(ruleArgument, position29)
			}
			return true
		l28:
			position, tokenIndex = position28, tokenIndex28
			return false
		},
		/* 5 FunctionCall <- <((LPAR Line RPAR) / ((DOLLAR / AMPERSAND) Argument (DOT Argument)*))> */
		func() bool {
			position39, tokenIndex39 := position, tokenIndex
			{
				position40 := position
				{
					position41, tokenIndex41 := position, tokenIndex
					if !_rules[ruleLPAR]() {
						goto l42
					}
					if !_rules[ruleLine]() {
						goto l42
					}
					if !_rules[ruleRPAR]() {
						goto l42
					}
					goto l41
				l42:
					position, tokenIndex = position41, tokenIndex41
					{
						position43, tokenIndex43 := position, tokenIndex
						if !_rules[ruleDOLLAR]() {
							goto l44
						}
						goto l43
					l44:
						position, tokenIndex = position43, tokenIndex43
						if !_rules[ruleAMPERSAND]() {
							goto l39
						}
					}
				l43:
					if !_rules[ruleArgument]() {
						goto l39
					}
				l45:
					{
						position46, tokenIndex46 := position, tokenIndex
						if !_rules[ruleDOT]() {
							goto l46
						}
						if !_rules[ruleArgument]() {
							goto l46
						}
						goto l45
					l46:
						position, tokenIndex = position46, tokenIndex46
					}
				}
			l41:
				add(ruleFunctionCall, position40)
			}
			return true
		l39:
			position, tokenIndex = position39, tokenIndex39
			return false
		},
		/* 6 Block <- <(LCURLY NewLine* Line* RCURLY)> */
		func() bool {
			position47, tokenIndex47 := position, tokenIndex
			{
				position48 := position
				if !_rules[ruleLCURLY]() {
					goto l47
				}
			l49:
				{
					position50, tokenIndex50 := position, tokenIndex
					if !_rules[ruleNewLine]() {
						goto l50
					}
					goto l49
				l50:
					position, tokenIndex = position50, tokenIndex50
				}
			l51:
				{
					position52, tokenIndex52 := position, tokenIndex
					if !_rules[ruleLine]() {
						goto l52
					}
					goto l51
				l52:
					position, tokenIndex = position52, tokenIndex52
				}
				if !_rules[ruleRCURLY]() {
					goto l47
				}
				add(ruleBlock, position48)
			}
			return true
		l47:
			position, tokenIndex = position47, tokenIndex47
			return false
		},
		/* 7 BlockWithoutSpacing <- <(LCURLY NewLine* Line* '}')> */
		func() bool {
			position53, tokenIndex53 := position, tokenIndex
			{
				position54 := position
				if !_rules[ruleLCURLY]() {
					goto l53
				}
			l55:
				{
					position56, tokenIndex56 := position, tokenIndex
					if !_rules[ruleNewLine]() {
						goto l56
					}
					goto l55
				l56:
					position, tokenIndex = position56, tokenIndex56
				}
			l57:
				{
					position58, tokenIndex58 := position, tokenIndex
					if !_rules[ruleLine]() {
						goto l58
					}
					goto l57
				l58:
					position, tokenIndex = position58, tokenIndex58
				}
				if buffer[position] != rune('}') {
					goto l53
				}
				position++
				add(ruleBlockWithoutSpacing, position54)
			}
			return true
		l53:
			position, tokenIndex = position53, tokenIndex53
			return false
		},
		/* 8 List <- <(LBRACKET NewLine* (Argument / NewLine)? (((COMMA NewLine?)? Argument) / NewLine)* RBRACKET)> */
		func() bool {
			position59, tokenIndex59 := position, tokenIndex
			{
				position60 := position
				if !_rules[ruleLBRACKET]() {
					goto l59
				}
			l61:
				{
					position62, tokenIndex62 := position, tokenIndex
					if !_rules[ruleNewLine]() {
						goto l62
					}
					goto l61
				l62:
					position, tokenIndex = position62, tokenIndex62
				}
				{
					position63, tokenIndex63 := position, tokenIndex
					{
						position65, tokenIndex65 := position, tokenIndex
						if !_rules[ruleArgument]() {
							goto l66
						}
						goto l65
					l66:
						position, tokenIndex = position65, tokenIndex65
						if !_rules[ruleNewLine]() {
							goto l63
						}
					}
				l65:
					goto l64
				l63:
					position, tokenIndex = position63, tokenIndex63
				}
			l64:
			l67:
				{
					position68, tokenIndex68 := position, tokenIndex
					{
						position69, tokenIndex69 := position, tokenIndex
						{
							position71, tokenIndex71 := position, tokenIndex
							if !_rules[ruleCOMMA]() {
								goto l71
							}
							{
								position73, tokenIndex73 := position, tokenIndex
								if !_rules[ruleNewLine]() {
									goto l73
								}
								goto l74
							l73:
								position, tokenIndex = position73, tokenIndex73
							}
						l74:
							goto l72
						l71:
							position, tokenIndex = position71, tokenIndex71
						}
					l72:
						if !_rules[ruleArgument]() {
							goto l70
						}
						goto l69
					l70:
						position, tokenIndex = position69, tokenIndex69
						if !_rules[ruleNewLine]() {
							goto l68
						}
					}
				l69:
					goto l67
				l68:
					position, tokenIndex = position68, tokenIndex68
				}
				if !_rules[ruleRBRACKET]() {
					goto l59
				}
				add(ruleList, position60)
			}
			return true
		l59:
			position, tokenIndex = position59, tokenIndex59
			return false
		},
		/* 9 Spacing <- <(WhiteSpace / LongComment / LineComment)*> */
		func() bool {
			{
				position76 := position
			l77:
				{
					position78, tokenIndex78 := position, tokenIndex
					{
						position79, tokenIndex79 := position, tokenIndex
						if !_rules[ruleWhiteSpace]() {
							goto l80
						}
						goto l79
					l80:
						position, tokenIndex = position79, tokenIndex79
						if !_rules[ruleLongComment]() {
							goto l81
						}
						goto l79
					l81:
						position, tokenIndex = position79, tokenIndex79
						if !_rules[ruleLineComment]() {
							goto l78
						}
					}
				l79:
					goto l77
				l78:
					position, tokenIndex = position78, tokenIndex78
				}
				add(ruleSpacing, position76)
			}
			return true
		},
		/* 10 WhiteSpace <- <(' ' / '\t')> */
		func() bool {
			position82, tokenIndex82 := position, tokenIndex
			{
				position83 := position
				{
					position84, tokenIndex84 := position, tokenIndex
					if buffer[position] != rune(' ') {
						goto l85
					}
					position++
					goto l84
				l85:
					position, tokenIndex = position84, tokenIndex84
					if buffer[position] != rune('\t') {
						goto l82
					}
					position++
				}
			l84:
				add(ruleWhiteSpace, position83)
			}
			return true
		l82:
			position, tokenIndex = position82, tokenIndex82
			return false
		},
		/* 11 LongComment <- <('/' '*' (!('*' '/') .)* ('*' '/'))> */
		func() bool {
			position86, tokenIndex86 := position, tokenIndex
			{
				position87 := position
				if buffer[position] != rune('/') {
					goto l86
				}
				position++
				if buffer[position] != rune('*') {
					goto l86
				}
				position++
			l88:
				{
					position89, tokenIndex89 := position, tokenIndex
					{
						position90, tokenIndex90 := position, tokenIndex
						if buffer[position] != rune('*') {
							goto l90
						}
						position++
						if buffer[position] != rune('/') {
							goto l90
						}
						position++
						goto l89
					l90:
						position, tokenIndex = position90, tokenIndex90
					}
					if !matchDot() {
						goto l89
					}
					goto l88
				l89:
					position, tokenIndex = position89, tokenIndex89
				}
				if buffer[position] != rune('*') {
					goto l86
				}
				position++
				if buffer[position] != rune('/') {
					goto l86
				}
				position++
				add(ruleLongComment, position87)
			}
			return true
		l86:
			position, tokenIndex = position86, tokenIndex86
			return false
		},
		/* 12 LineComment <- <('#' (!'\n' .)*)> */
		func() bool {
			position91, tokenIndex91 := position, tokenIndex
			{
				position92 := position
				if buffer[position] != rune('#') {
					goto l91
				}
				position++
			l93:
				{
					position94, tokenIndex94 := position, tokenIndex
					{
						position95, tokenIndex95 := position, tokenIndex
						if buffer[position] != rune('\n') {
							goto l95
						}
						position++
						goto l94
					l95:
						position, tokenIndex = position95, tokenIndex95
					}
					if !matchDot() {
						goto l94
					}
					goto l93
				l94:
					position, tokenIndex = position94, tokenIndex94
				}
				add(ruleLineComment, position92)
			}
			return true
		l91:
			position, tokenIndex = position91, tokenIndex91
			return false
		},
		/* 13 NewLine <- <(('\n' / '\r') Spacing)+> */
		func() bool {
			position96, tokenIndex96 := position, tokenIndex
			{
				position97 := position
				{
					position100, tokenIndex100 := position, tokenIndex
					if buffer[position] != rune('\n') {
						goto l101
					}
					position++
					goto l100
				l101:
					position, tokenIndex = position100, tokenIndex100
					if buffer[position] != rune('\r') {
						goto l96
					}
					position++
				}
			l100:
				if !_rules[ruleSpacing]() {
					goto l96
				}
			l98:
				{
					position99, tokenIndex99 := position, tokenIndex
					{
						position102, tokenIndex102 := position, tokenIndex
						if buffer[position] != rune('\n') {
							goto l103
						}
						position++
						goto l102
					l103:
						position, tokenIndex = position102, tokenIndex102
						if buffer[position] != rune('\r') {
							goto l99
						}
						position++
					}
				l102:
					if !_rules[ruleSpacing]() {
						goto l99
					}
					goto l98
				l99:
					position, tokenIndex = position99, tokenIndex99
				}
				add(ruleNewLine, position97)
			}
			return true
		l96:
			position, tokenIndex = position96, tokenIndex96
			return false
		},
		/* 14 Identifier <- <((IdNondigit IdChar* ((IdEnd? Spacing) / (IdEnd Spacing?))) / (IdEnd Spacing))> */
		func() bool {
			position104, tokenIndex104 := position, tokenIndex
			{
				position105 := position
				{
					position106, tokenIndex106 := position, tokenIndex
					if !_rules[ruleIdNondigit]() {
						goto l107
					}
				l108:
					{
						position109, tokenIndex109 := position, tokenIndex
						if !_rules[ruleIdChar]() {
							goto l109
						}
						goto l108
					l109:
						position, tokenIndex = position109, tokenIndex109
					}
					{
						position110, tokenIndex110 := position, tokenIndex
						{
							position112, tokenIndex112 := position, tokenIndex
							if !_rules[ruleIdEnd]() {
								goto l112
							}
							goto l113
						l112:
							position, tokenIndex = position112, tokenIndex112
						}
					l113:
						if !_rules[ruleSpacing]() {
							goto l111
						}
						goto l110
					l111:
						position, tokenIndex = position110, tokenIndex110
						if !_rules[ruleIdEnd]() {
							goto l107
						}
						{
							position114, tokenIndex114 := position, tokenIndex
							if !_rules[ruleSpacing]() {
								goto l114
							}
							goto l115
						l114:
							position, tokenIndex = position114, tokenIndex114
						}
					l115:
					}
				l110:
					goto l106
				l107:
					position, tokenIndex = position106, tokenIndex106
					if !_rules[ruleIdEnd]() {
						goto l104
					}
					if !_rules[ruleSpacing]() {
						goto l104
					}
				}
			l106:
				add(ruleIdentifier, position105)
			}
			return true
		l104:
			position, tokenIndex = position104, tokenIndex104
			return false
		},
		/* 15 IdNondigit <- <([a-z] / [A-Z] / '_')> */
		func() bool {
			position116, tokenIndex116 := position, tokenIndex
			{
				position117 := position
				{
					position118, tokenIndex118 := position, tokenIndex
					if c := buffer[position]; c < rune('a') || c > rune('z') {
						goto l119
					}
					position++
					goto l118
				l119:
					position, tokenIndex = position118, tokenIndex118
					if c := buffer[position]; c < rune('A') || c > rune('Z') {
						goto l120
					}
					position++
					goto l118
				l120:
					position, tokenIndex = position118, tokenIndex118
					if buffer[position] != rune('_') {
						goto l116
					}
					position++
				}
			l118:
				add(ruleIdNondigit, position117)
			}
			return true
		l116:
			position, tokenIndex = position116, tokenIndex116
			return false
		},
		/* 16 IdChar <- <([a-z] / [A-Z] / [0-9] / '_')> */
		func() bool {
			position121, tokenIndex121 := position, tokenIndex
			{
				position122 := position
				{
					position123, tokenIndex123 := position, tokenIndex
					if c := buffer[position]; c < rune('a') || c > rune('z') {
						goto l124
					}
					position++
					goto l123
				l124:
					position, tokenIndex = position123, tokenIndex123
					if c := buffer[position]; c < rune('A') || c > rune('Z') {
						goto l125
					}
					position++
					goto l123
				l125:
					position, tokenIndex = position123, tokenIndex123
					if c := buffer[position]; c < rune('0') || c > rune('9') {
						goto l126
					}
					position++
					goto l123
				l126:
					position, tokenIndex = position123, tokenIndex123
					if buffer[position] != rune('_') {
						goto l121
					}
					position++
				}
			l123:
				add(ruleIdChar, position122)
			}
			return true
		l121:
			position, tokenIndex = position121, tokenIndex121
			return false
		},
		/* 17 IdEnd <- <('?' / '!')> */
		func() bool {
			position127, tokenIndex127 := position, tokenIndex
			{
				position128 := position
				{
					position129, tokenIndex129 := position, tokenIndex
					if buffer[position] != rune('?') {
						goto l130
					}
					position++
					goto l129
				l130:
					position, tokenIndex = position129, tokenIndex129
					if buffer[position] != rune('!') {
						goto l127
					}
					position++
				}
			l129:
				add(ruleIdEnd, position128)
			}
			return true
		l127:
			position, tokenIndex = position127, tokenIndex127
			return false
		},
		/* 18 StringLiteral <- <(Quote StringChar* Quote Spacing)> */
		func() bool {
			position131, tokenIndex131 := position, tokenIndex
			{
				position132 := position
				if !_rules[ruleQuote]() {
					goto l131
				}
			l133:
				{
					position134, tokenIndex134 := position, tokenIndex
					if !_rules[ruleStringChar]() {
						goto l134
					}
					goto l133
				l134:
					position, tokenIndex = position134, tokenIndex134
				}
				if !_rules[ruleQuote]() {
					goto l131
				}
				if !_rules[ruleSpacing]() {
					goto l131
				}
				add(ruleStringLiteral, position132)
			}
			return true
		l131:
			position, tokenIndex = position131, tokenIndex131
			return false
		},
		/* 19 Quote <- <'"'> */
		func() bool {
			position135, tokenIndex135 := position, tokenIndex
			{
				position136 := position
				if buffer[position] != rune('"') {
					goto l135
				}
				position++
				add(ruleQuote, position136)
			}
			return true
		l135:
			position, tokenIndex = position135, tokenIndex135
			return false
		},
		/* 20 StringChar <- <(Escape / (!('"' / '\n' / '\\') .))> */
		func() bool {
			position137, tokenIndex137 := position, tokenIndex
			{
				position138 := position
				{
					position139, tokenIndex139 := position, tokenIndex
					if !_rules[ruleEscape]() {
						goto l140
					}
					goto l139
				l140:
					position, tokenIndex = position139, tokenIndex139
					{
						position141, tokenIndex141 := position, tokenIndex
						{
							position142, tokenIndex142 := position, tokenIndex
							if buffer[position] != rune('"') {
								goto l143
							}
							position++
							goto l142
						l143:
							position, tokenIndex = position142, tokenIndex142
							if buffer[position] != rune('\n') {
								goto l144
							}
							position++
							goto l142
						l144:
							position, tokenIndex = position142, tokenIndex142
							if buffer[position] != rune('\\') {
								goto l141
							}
							position++
						}
					l142:
						goto l137
					l141:
						position, tokenIndex = position141, tokenIndex141
					}
					if !matchDot() {
						goto l137
					}
				}
			l139:
				add(ruleStringChar, position138)
			}
			return true
		l137:
			position, tokenIndex = position137, tokenIndex137
			return false
		},
		/* 21 Escape <- <('\\' (BlockWithoutSpacing / .))> */
		func() bool {
			position145, tokenIndex145 := position, tokenIndex
			{
				position146 := position
				if buffer[position] != rune('\\') {
					goto l145
				}
				position++
				{
					position147, tokenIndex147 := position, tokenIndex
					if !_rules[ruleBlockWithoutSpacing]() {
						goto l148
					}
					goto l147
				l148:
					position, tokenIndex = position147, tokenIndex147
					if !matchDot() {
						goto l145
					}
				}
			l147:
				add(ruleEscape, position146)
			}
			return true
		l145:
			position, tokenIndex = position145, tokenIndex145
			return false
		},
		/* 22 LongStringLiteral <- <(BackTick LongStringChar* BackTick Spacing)> */
		func() bool {
			position149, tokenIndex149 := position, tokenIndex
			{
				position150 := position
				if !_rules[ruleBackTick]() {
					goto l149
				}
			l151:
				{
					position152, tokenIndex152 := position, tokenIndex
					if !_rules[ruleLongStringChar]() {
						goto l152
					}
					goto l151
				l152:
					position, tokenIndex = position152, tokenIndex152
				}
				if !_rules[ruleBackTick]() {
					goto l149
				}
				if !_rules[ruleSpacing]() {
					goto l149
				}
				add(ruleLongStringLiteral, position150)
			}
			return true
		l149:
			position, tokenIndex = position149, tokenIndex149
			return false
		},
		/* 23 BackTick <- <'`'> */
		func() bool {
			position153, tokenIndex153 := position, tokenIndex
			{
				position154 := position
				if buffer[position] != rune('`') {
					goto l153
				}
				position++
				add(ruleBackTick, position154)
			}
			return true
		l153:
			position, tokenIndex = position153, tokenIndex153
			return false
		},
		/* 24 LongStringChar <- <(LongEscape / (!'`' .))> */
		func() bool {
			position155, tokenIndex155 := position, tokenIndex
			{
				position156 := position
				{
